# roc-platform-template-rust

./: .gitignore  .roc-version  Cargo.toml  README.md  app.roc  build.roc  build.sh  bundle.sh  flake.nix  glue.roc  rust-toolchain.toml
.github/workflows/: ci.yml  ci_native.yaml  ci_nix.yaml  release.yml
ci/: all_tests.sh  get_roc_commit.py
ci/expect_scripts/: exit_code_msg.exp  exit_tag.exp  hello.exp
crates/roc_app/src/: x86_64.rs
crates/roc_ast/: Cargo.toml
crates/roc_ast/src/: header.rs  lib.rs  spaced.rs
crates/roc_host/: Cargo.toml
crates/roc_host/src/: ast.rs  glue.rs  lib.rs
crates/roc_host_lib/: Cargo.toml
examples/: all_roc_syntax.roc  cli_args.roc  dbg_test.roc  echo.roc  echo_multiline.roc  exit.roc  exit_code_msg.roc  exit_tag.roc  fizzbuzz.roc  hello-world  hello-world.roc  hello.roc  hello_world.roc  match.roc  stderr.roc  sum_fold.roc  tests.roc
platform/: Ast.roc  Effect.roc  Host.roc  PlatformTask.roc  Stdout.roc  Task.roc  glue-ast.roc  glue.roc  libapp.roc  main.roc  stub.roc
src/: lib.rs  roc_platform_abi.rs
