[workspace]
resolver = "2"
members = ["crates/roc_host", "crates/roc_ast", "crates/roc_host_lib"]

[workspace.package]
version = "0.0.1"
authors = ["The Contributors"]
license = "UPL-1.0"
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"
# Enabling this triggered a segmentation fault (see issue github.com/roc-lang/roc/issues/6121).
# That issue is notoriously fickle, so disableing this may just happen to shuffle the code enough to avoid it.
# Try re-enableing this again in the future after some code changes, it may no longer trigger this issue.
# Setting it to 1 should improve execution speed by making things easier to optimize for LLVM.
# codegen-units = 1

[workspace.dependencies]
libc = "=0.2.150"
roc_std = { git = "https://github.com/roc-lang/roc.git" }
roc_host = { path = "crates/roc_host" }
roc_ast = { path = "crates/roc_ast" }
