[package]
name = "roc_host"
version = "0.0.1"
edition = "2021"

[lib]
name = "host"
crate-type = ["staticlib"]

[[bin]]
name = "host"
path = "src/main.rs"

[dependencies]
libc = "0.2"
roc_std_new = { path = "/Users/luke/Documents/GitHub/roc/crates/roc_std_new" }

[profile.release]
lto = true
strip = "debuginfo"
