[package]
name = "roc_host"
description = "This provides the [host](https://github.com/roc-lang/roc/wiki/Roc-concepts-explained#host) implementation for the platform."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
libc.workspace = true
roc_std.workspace = true
roc_ast.workspace = true
