[package]
name = "host"
description = "This crate wraps roc_host and produces a static library (.a file). This .a file is used for legacy linking. Legacy linking refers to using a typical linker like ld or ldd instead of the Roc surgical linker."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "host"
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
roc_std.workspace = true
roc_host.workspace = true
